# P4What

./: README.md
CUDA-guide/VectorSum/: CMakeLists.txt  main.cu  vectorSum.cu  vectorSum.cuh
CV/edge_detect/: edge_detection.py
CV/harris/: CMakeLists.txt  harris.cpp  harris.hpp  main.cpp  util.hpp
CVbase/test-example/: CMakeLists.txt  test.cpp
PRML/: MLP.py  pagerank.py  pagerank_v2.py  perceptron.py  smo.py
PfDA/: random-walk.py
PfDA/intro/: developer_hubs.json  get_data.py
PfDA/py_review/: decorator.py  generator_01.py  process_01.py  process_02.py  process_03.py  thread_01.py  thread_02.py
balgo/template/: 2-SAT.cpp  2based-FFT.cpp  Adaptive Simpson.cpp  Aho-Corasick.py  Bignum(naive).cpp  Bitset.cpp  Fenwick.cpp  (+59 more)
cs231n/: __init__.py
cs231n-Spring2017/: KNN_cifar10.py  Linear_cifar.py
pthread/: helloworld.cpp  join_detach.cpp  mutex.cpp  mutexAdd.cpp  non_mutexAdd.cpp  stack_manage.cpp  thread_num.cpp  thread_params.cpp
pytorch-learn/: AlexNet_02.py  autograd_01.py  modelSave_05.py  stateDict_04.py  tinyComplete_06.py  toyClassification_03.py
tf-learn/: EMA_example_16.py  Lr_setting_14.py  NNdropout_09.py  NNgraph_visual_06.py  NNtrain_visual_07.py  QueueRunner_20.py  TFRecord_Trans_18.py  TFRecord_read_21.py  TFRecord_single_read_19.py  TFslim_23.py  aboutVariable_03.py  batching_22.py  better_CNNminist_11.py  better_NN_12.py  firstCNN_mnist_10.py  firstNN_05.py  helloWorld_00.py  matrixMul_02.py  regularization_15.py  saver_13.py  sendData_04.py  softmax_mnist_08.py  supervisor_24.py  toyFitting_01.py
wolfram-play/: Lagrange_multi.nb
(+155 files in other folders)
